Add basic styling

--- a/index.html
+++ b/index.html
@@ -6,6 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="./index.js" defer></script>
+    <link rel="stylesheet" type="text/css" href="./index.css"></link>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="display">
+        display
+      </div>
+      <div class="buttons">
+        <div id="clear">AC</div>
+        <div id="sign">+/-</div>
+        <div id="percent">%</div>
+        <div id="divide">/</div>
+        <div id="seven">7</div>
+        <div id="eight">8</div>
+        <div id="nine">9</div>
+        <div id="multiply">*</div>
+        <div id="four">4</div>
+        <div id="five">5</div>
+        <div id="six">6</div>
+        <div id="subtract">-</div>
+        <div id="one">1</div>
+        <div id="two">2</div>
+        <div id="three">3</div>
+        <div id="add">+</div>
+        <div id="zero">0</div>
+        <div id="decimal">.</div>
+        <div id="equal">=</div>
+      </div>
+    </div>
+  </body>
 </html>
