Add display functionality

--- a/index.html
+++ b/index.html
@@ -10,29 +10,29 @@
   </head>
   <body>
     <div class="container">
-      <div class="display">
+      <div id="display">
         display
       </div>
       <div class="buttons">
-        <div id="clear">AC</div>
-        <div id="sign">+/-</div>
-        <div id="percent">%</div>
-        <div id="divide">/</div>
-        <div id="seven">7</div>
-        <div id="eight">8</div>
-        <div id="nine">9</div>
-        <div id="multiply">*</div>
-        <div id="four">4</div>
-        <div id="five">5</div>
-        <div id="six">6</div>
-        <div id="subtract">-</div>
-        <div id="one">1</div>
-        <div id="two">2</div>
-        <div id="three">3</div>
-        <div id="add">+</div>
-        <div id="zero">0</div>
-        <div id="decimal">.</div>
-        <div id="equal">=</div>
+        <div class=actionButton>AC</div>
+        <div class=actionButton>+/-</div>
+        <div class="operationButton">%</div>
+        <div class="operationButton">/</div>
+        <div class="numberButton">7</div>
+        <div class="numberButton">8</div>
+        <div class="numberButton">9</div>
+        <div class="operationButton">*</div>
+        <div class="numberButton">4</div>
+        <div class="numberButton">5</div>
+        <div class="numberButton">6</div>
+        <div class="operationButton">-</div>
+        <div class="numberButton">1</div>
+        <div class="numberButton">2</div>
+        <div class="numberButton">3</div>
+        <div class="operationButton">+</div>
+        <div class="numberButton">0</div>
+        <div class=actionButton>.</div>
+        <div class=actionButton>=</div>
       </div>
     </div>
   </body>
