--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="operationButton">+</div>
         <div class="numberButton">0</div>
         <div class=actionButton>.</div>
-        <div class=actionButton>=</div>
+        <div class=equalButton>=</div>
       </div>
     </div>
   </body>
