--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   <body>
     <div class="container">
       <div id="display">
-        0
+        
       </div>
       <div class="buttons">
-        <div class=actionButton>AC</div>
-        <div class=actionButton>+/-</div>
+        <div class=clearButton>AC</div>
+        <div class=signButton>+/-</div>
         <div class="operationButton">%</div>
         <div class="operationButton">/</div>
         <div class="numberButton">7</div>
@@ -31,7 +31,7 @@
         <div class="numberButton">3</div>
         <div class="operationButton">+</div>
         <div class="numberButton">0</div>
-        <div class=actionButton>.</div>
+        <div class=decimalButton>.</div>
         <div class=equalButton>=</div>
       </div>
     </div>
