--- a/index.html
+++ b/index.html
@@ -14,25 +14,25 @@
         
       </div>
       <div class="buttons">
-        <div class=clearButton>AC</div>
-        <div class=signButton>+/-</div>
-        <div class="operationButton">%</div>
-        <div class="operationButton">/</div>
-        <div class="numberButton">7</div>
-        <div class="numberButton">8</div>
-        <div class="numberButton">9</div>
-        <div class="operationButton">*</div>
-        <div class="numberButton">4</div>
-        <div class="numberButton">5</div>
-        <div class="numberButton">6</div>
-        <div class="operationButton">-</div>
-        <div class="numberButton">1</div>
-        <div class="numberButton">2</div>
-        <div class="numberButton">3</div>
-        <div class="operationButton">+</div>
-        <div class="numberButton">0</div>
-        <div class=decimalButton>.</div>
-        <div class=equalButton>=</div>
+        <button class="clearButton">AC</button>
+        <button class="signButton">+/-</button>
+        <button class="operationButton">%</button>
+        <button class="operationButton">/</button>
+        <button class="numberButton">7</button>
+        <button class="numberButton">8</button>
+        <button class="numberButton">9</button>
+        <button class="operationButton">*</button>
+        <button class="numberButton">4</button>
+        <button class="numberButton">5</button>
+        <button class="numberButton">6</button>
+        <button class="operationButton">-</button>
+        <button class="numberButton">1</button>
+        <button class="numberButton">2</button>
+        <button class="numberButton">3</button>
+        <button class="operationButton">+</button>
+        <button class="numberButton" id="numberZero">0</button>
+        <button class="decimalButton">.</button>
+        <button class="equalButton" >=</button>
       </div>
     </div>
   </body>
