Change styling and add error when trying to percentage a percentage:)

--- a/index.html
+++ b/index.html
@@ -14,25 +14,25 @@
         
       </div>
       <div class="buttons">
-        <button class="clearButton">AC</button>
-        <button class="signButton">+/-</button>
-        <button class="operationButton">%</button>
-        <button class="operationButton">/</button>
+        <button class="clearButton grey">C</button>
+        <button class="signButton grey">+/-</button>
+        <button class="operationButton grey">%</button>
+        <button class="operationButton orange">÷</button>
         <button class="numberButton">7</button>
         <button class="numberButton">8</button>
         <button class="numberButton">9</button>
-        <button class="operationButton">*</button>
+        <button class="operationButton orange">x</button>
         <button class="numberButton">4</button>
         <button class="numberButton">5</button>
         <button class="numberButton">6</button>
-        <button class="operationButton">-</button>
+        <button class="operationButton orange">-</button>
         <button class="numberButton">1</button>
         <button class="numberButton">2</button>
         <button class="numberButton">3</button>
-        <button class="operationButton">+</button>
+        <button class="operationButton orange">+</button>
         <button class="numberButton" id="numberZero">0</button>
         <button class="decimalButton">.</button>
-        <button class="equalButton" >=</button>
+        <button class="equalButton orange" >=</button>
       </div>
     </div>
   </body>
